Bug 312835 - The keyboard shorcut Ctrl+Alt+Right for "Switch to next desktop" doesn't work anymore since commit a2a335064e206f0689e315d58c30bedce90decff
Summary: The keyboard shorcut Ctrl+Alt+Right for "Switch to next desktop" doesn't work...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-07 17:56 UTC by Jekyll Wu
Modified: 2013-01-08 20:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2013-01-07 17:56:46 UTC
I have assigned and used Ctrl+Alt+Right as the global shorctcut for "Switch to next desktop" for a long time. Now it doesnt' work anymore since commit a2a335064e206f0689e315d58c30bedce90decff .  

On the other hand, Ctrl+Shift+Alt+Right still works for me as the shorcut for "Window to next desktop"


Reproducible: Always

Steps to Reproduce:
1. run "kcmshell4 keys", find kwin
2. Assigen Ctrl+Alt+Right as the keyboard shortcut for "Switch to next desktop"
3. Use that shortcut to switch desktop

Actual Results:  
No change

Expected Results:  
switch to next desktop
Comment 1 Martin Flöser 2013-01-07 20:38:42 UTC
that should still work given that the shortcuts should still be there and the complete functionality is unit tested. I will look into it tomorrow
Comment 2 Thomas Lübking 2013-01-07 22:29:48 UTC
one could also ::setGlobalShortcutAllowed(true)	instead, but this restores the former state.

https://git.reviewboard.kde.org/r/108253/
Comment 3 Thomas Lübking 2013-01-08 20:52:25 UTC
Git commit fcf4f610a68dd322f2202f01c52053b7c0063873 by Thomas Lübking.
Committed on 07/01/2013 at 23:21.
Pushed by luebking into branch 'master'.

set a default void global shortcut

and implicitly enable them
REVIEW: 108253

M  +1    -0    kwin/virtualdesktops.cpp

http://commits.kde.org/kde-workspace/fcf4f610a68dd322f2202f01c52053b7c0063873