set a default void global shortcut

and implicitly enable them
REVIEW: 108253
BUG: 312835